--- a/backend/templates/backend/backend.html
+++ b/backend/templates/backend/backend.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>ManetReference Backend</title>
+		<title>Easy House - Backend</title>
 	
 		<!-- CSS Shts -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -31,7 +31,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{% url 'backend' %}">ManetReference Backend</a> 
+			<a class="navbar-brand" href="{% url 'backend' %}">EasyHouse - Backend</a> 
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
@@ -62,8 +62,8 @@
 			<ul class="nav nav-stacked">
 				<li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu">Settings <i class="glyphicon glyphicon-chevron-down"></i></a>
 					<ul class="nav nav-stacked collapse in" id="userMenu">
-						<li><a href=""><i class="glyphicon glyphicon-home"></i> ManetReference Site</a></li>
-						<li class="active"> <a href="{% url 'backend' %}"><i class="glyphicon glyphicon-home"></i> ManetReference Backend</a></li>
+						<li><a href=""><i class="glyphicon glyphicon-home"></i> EasyHouse Site</a></li>
+						<li class="active"> <a href="{% url 'backend' %}"><i class="glyphicon glyphicon-home"></i> EasyHouse Backend</a></li>
 						<li><a href=""><i class="glyphicon glyphicon-cog"></i> Operations</a></li>
 						<li><a href=""><i class="glyphicon glyphicon-user"></i> Staff List</a></li>
 						<li><a href=""><i class="glyphicon glyphicon-off"></i> Logout</a></li>
@@ -100,7 +100,7 @@
 </div>
 <!-- /Main -->
 
-<footer class="text-center">Manet Reference - All rights reserved</footer>
+<footer class="text-center">Easy House - All rights reserved</footer>
 
 </body>
 </html>
