--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -10,60 +10,69 @@
 				<!-- center left-->
 				<h3>Operations</h3>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
-					<h4>Sections</h4>
+					<h4>Content</h4>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'back_home_new' %}">
+							<a href="">
 								<i class="fa fa-plus fa-3x"></i>
-								<h5>Add <strong>Landing page</strong> Section</h5>
+								<h5><strong>Landing</strong> page sections</h5>
 							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'back_homeR_new' %}">
+							<a href="">
 								<i class="fa fa-plus fa-3x"></i>
-								<h5>Add <strong>Right Home</strong> Section</h5>
+								<h5><strong>Contact</strong> page sections</h5>
 							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'back_home_list' %}">
+							<a href="">
 	 							<i class="fa fa-pencil fa-3x"></i>
-								<h5>Modify/Delete <strong>Home</strong> Sections</h5>
+								<h5><strong>About</strong> page sections</h5>
 							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'back_alg_new' %}">
+							<a href="">
 								<i class="fa fa-plus fa-3x"></i>
-								<h5>Add <strong>Left Algorithm</strong> Section</h5>
+								<h5><strong>Apartments</strong> page sections</h5>
 							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'back_algR_new' %}">
+							<a href="">
 								<i class="fa fa-plus fa-3x"></i>
-								<h5>Add <strong>Right Algorithm</strong> Section</h5>
+								<h5><strong>Restaurants</strong> page section</h5>
 							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'back_algs_list' %}">
+							<a href="">
 	 							<i class="fa fa-pencil fa-3x"></i>
-								<h5>Modify/Delete <strong>Algorithm</strong> Sections</h5>
+								<h5><strong>Attractions</strong> page sections</h5>
 							</a>
 						</div>
 					</div>
+					
+					<div class="row">
+						<div class="div-square">
+							<a href="">
+	 							<i class="fa fa-pencil fa-3x"></i>
+								<h5><strong>Deals</strong> page sections</h5>
+							</a>
+						</div>
+					</div><!-- closing .row -->
 
 					<div>
 						<p> &nbsp; </p>
@@ -90,7 +99,7 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="{% url 'to_del_user' %}">
+							<a href="">
 								<i class="fa fa-user-times fa-3x"></i>
 								<h5>Delete Account</h5>
 							</a>
