--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -14,7 +14,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
 							<a href="">
-								<i class="fa fa-plus fa-3x"></i>
+								<i class="fa fa-plane fa-3x"></i>
 								<h5><strong>Landing</strong> page sections</h5>
 							</a>
 						</div>
@@ -23,7 +23,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
 							<a href="">
-								<i class="fa fa-plus fa-3x"></i>
+								<i class="fa fa-envelope-o fa-3x"></i>
 								<h5><strong>Contact</strong> page sections</h5>
 							</a>
 						</div>
@@ -32,7 +32,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
 							<a href="">
-	 							<i class="fa fa-pencil fa-3x"></i>
+	 							<i class="fa fa-question-circle-o fa-3x"></i>
 								<h5><strong>About</strong> page sections</h5>
 							</a>
 						</div>
@@ -41,7 +41,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
 							<a href="">
-								<i class="fa fa-plus fa-3x"></i>
+								<i class="fa fa-bed fa-3x"></i>
 								<h5><strong>Apartments</strong> page sections</h5>
 							</a>
 						</div>
@@ -50,7 +50,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
 							<a href="">
-								<i class="fa fa-plus fa-3x"></i>
+								<i class="fa fa-cutlery fa-3x"></i>
 								<h5><strong>Restaurants</strong> page section</h5>
 							</a>
 						</div>
@@ -59,16 +59,16 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
 							<a href="">
-	 							<i class="fa fa-pencil fa-3x"></i>
+	 							<i class="fa fa-camera-retro fa-3x"></i>
 								<h5><strong>Attractions</strong> page sections</h5>
 							</a>
 						</div>
 					</div>
 					
-					<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<div class="div-square">
 							<a href="">
-	 							<i class="fa fa-pencil fa-3x"></i>
+	 							<i style="color: red" class="fa fa-heart-o fa-3x"></i>
 								<h5><strong>Deals</strong> page sections</h5>
 							</a>
 						</div>
