Major update: Landing page funcionality is fully operative now

--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -13,7 +13,7 @@
 					<h4>Content</h4>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="">
+							<a href="{% url 'backend:backend_ops_landing' %}">
 								<i class="fa fa-plane fa-3x"></i>
 								<h5><strong>Landing</strong> page sections</h5>
 							</a>
