--- a/backend/templates/backend/backend.html
+++ b/backend/templates/backend/backend.html
@@ -14,7 +14,7 @@
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="{% static '../static/css/styles.css' %}" rel="stylesheet">
+		<!-- <link href="{% static '../static/css/styles.css' %}" rel="stylesheet"> -->
 
 		<!-- script references -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
