MAJOR UPDATE: About page is fully operative

--- a/backend/templates/backend/backend.html
+++ b/backend/templates/backend/backend.html
@@ -66,11 +66,12 @@
 				<li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu"><strong>Operations</strong> <i class="glyphicon glyphicon-chevron-down"></i></a>
 					<ul class="nav nav-stacked collapse in" id="userMenu">
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Overview</a></li>
+						<li><a href="{% url 'backend:backend_ops_landing' %}"><i class="glyphicon glyphicon-cog"></i> Landing</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Accomodations</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Restaurants</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Attractions</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Deals</a></li>
-						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> About</a></li>
+						<li><a href="{% url 'backend:backend_ops_about' %}"><i class="glyphicon glyphicon-cog"></i> About</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Contact</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Users</a></li>
 					</ul>
