--- a/backend/templates/backend/about_member2_detail.html
+++ b/backend/templates/backend/about_member2_detail.html
@@ -8,9 +8,10 @@
                 {{ section.published_date }}
             </div>
         {% endif %}
-        <a class="btn btn-default" href="{% url 'backend:about_title_edit' pk=section.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        <a class="btn btn-default" href="{% url 'backend:about_title_remove' pk=section.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+        <a class="btn btn-default" href="{% url 'backend:about_member2_edit' pk=section.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-default" href="{% url 'backend:about_member2_remove' pk=section.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
         <h1>{{ section.title }}</h1>
+        <p>{{ section.text|linebreaksbr }}</p>	        
 </div>
 <p><a href="{% url 'backend:backend_ops_about' %}">Back to the list</a></p>
 {% endblock %}
