--- a/backend/templates/backend/about_teamTitle_detail.html
+++ b/backend/templates/backend/about_teamTitle_detail.html
@@ -8,8 +8,8 @@
                 {{ section.published_date }}
             </div>
         {% endif %}
-        <a class="btn btn-default" href="{% url 'backend:about_title_edit' pk=section.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        <a class="btn btn-default" href="{% url 'backend:about_title_remove' pk=section.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+        <a class="btn btn-default" href="{% url 'backend:about_teamTitle_edit' pk=section.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-default" href="{% url 'backend:about_teamTitle_remove' pk=section.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
         <h1>{{ section.title }}</h1>
 </div>
 <p><a href="{% url 'backend:backend_ops_about' %}">Back to the list</a></p>
