--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -31,7 +31,7 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="">
+							<a href="{% url 'backend:backend_ops_about' %}">
 	 							<i class="fa fa-question-circle-o fa-3x"></i>
 								<h5><strong>About</strong> page sections</h5>
 							</a>
