Minor update: staff list function has been added

--- a/backend/templates/backend/backend.html
+++ b/backend/templates/backend/backend.html
@@ -75,7 +75,7 @@
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Contact</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Users</a></li>
 					</ul>
-					<li><a href=""><i class="glyphicon glyphicon-user"></i> Staff List</a></li>
+					<li><a href="{% url 'backend:staff_list' %}"><i class="glyphicon glyphicon-user"></i> Staff List</a></li>
 					<li><a href=""><i class="glyphicon glyphicon-off"></i> Logout</a></li>
 				</li>
 				<li class="nav-header">
