--- a/backend/templates/backend/backend.html
+++ b/backend/templates/backend/backend.html
@@ -42,7 +42,7 @@
 						<li><a href="#">Change My Password</a></li>
 					</ul>
 				</li>
-				<li><a href=""><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
+				<li><a href="{% url 'frontend:logout' %}?next={% url 'frontend:frontend_home' %}"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
 			</ul>
 		</div>
 	</div>
