--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -12,19 +12,31 @@
 </div>
 		<div class="contact-main">
 			 <div class="contact-top">
+
+				{% for header in headers %}
 			 	<h3>Contact Us</h3>
+			 	<h3>{{ header.title }}</h3>
 			 	<P>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using making it look like readable English.</P>
+			 	<p>{{ header.text|linebreaksbr }}</p>
+			 	{% endfor %}
+
 			 </div>
 			<div class="col-md-6 contact-left">
 			  <div class="contact-info">
+			  	{% for information in informations %}
 				<h3>Contact Information</h3>
+				<h3>{{ information.title }}</h3>
 				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose</p>
+				<p>{{ information.text|linebreaksbr }}</p>
 			   </div>
 			  <div class= "con-addr">
+			  	{% for addresse in addresses %}
 			    <h4>Address</h4>
+			    <h4>{{ addresse.title }}</h4>
 			    <p><b>EasyHouse</b></p>
 				<p>Contrary to popular </p>
 			    <p>ph : +0000 000 000</p>
+			    <p>{{ addresse.text|linebreaksbr }}</p>
 			  </div>
 			</div>
 			<div class="col-md-6 contact-right">
