Minor fixes: Some contact bugs solved

--- a/backend/templates/backend/backend.html
+++ b/backend/templates/backend/backend.html
@@ -72,7 +72,7 @@
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Attractions</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Deals</a></li>
 						<li><a href="{% url 'backend:backend_ops_about' %}"><i class="glyphicon glyphicon-cog"></i> About</a></li>
-						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Contact</a></li>
+						<li><a href="{% url 'backend:backend_ops_contact' %}"><i class="glyphicon glyphicon-cog"></i> Contact</a></li>
 						<li><a href="{% url 'backend:operations' %}"><i class="glyphicon glyphicon-cog"></i> Users</a></li>
 					</ul>
 					<li><a href="{% url 'backend:staff_list' %}"><i class="glyphicon glyphicon-user"></i> Staff List</a></li>
