--- a/backend/templates/backend/contact_header_detail.html
+++ b/backend/templates/backend/contact_header_detail.html
@@ -11,6 +11,7 @@
         <a class="btn btn-default" href="{% url 'backend:contact_header_edit' pk=section.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         <a class="btn btn-default" href="{% url 'backend:contact_header_remove' pk=section.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
         <h1>{{ section.title }}</h1>
+        <p>{{ section.text|linebreaksbr }}</p>
 </div>
 <p><a href="{% url 'backend:backend_ops_contact' %}">Back to the list</a></p>
 {% endblock %}
