--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -22,7 +22,7 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="">
+							<a href="{% url 'backend:backend_ops_contact' %}">
 								<i class="fa fa-envelope-o fa-3x"></i>
 								<h5><strong>Contact</strong> page sections</h5>
 							</a>
