Major update: User deletion has been implemented

--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -99,7 +99,7 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
-							<a href="">
+							<a href="{% url 'backend:staff_predel_user' %}">
 								<i class="fa fa-user-times fa-3x"></i>
 								<h5>Delete Account</h5>
 							</a>
