--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -82,7 +82,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4 paddingtop-bottom info-footer">
-					<div class="logofooter">Manet Reference</div>
+					<div class="logofooter">Easy Home</div>
 					<p>Scientist information about manet (mobile ad hoc network) networks.</p>
 					<p><i class="fa fa-map-pin"></i> TU/e 5612 AZ Eindhoven</p>
 					<p><i class="fa fa-phone"></i> Phone (NL) : +31 040 247 9111</p>
@@ -115,7 +115,7 @@
 			</div>
 			<div class="col-md-6">
 				<ul class="bottom_ul">
-					<li><a href="#">Manet Reference</a></li>
+					<li><a href="#">Easy Home</a></li>
 					<li><a href="#">About us</a></li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Community</a></li>
