--- a/backend/templates/backend/backend_ops_contact.html
+++ b/backend/templates/backend/backend_ops_contact.html
@@ -32,7 +32,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="div-square">
               <a href="{% url 'backend:contact_new_address' %}">
-                <i class="fa fa-thumb-tack fa-3x"></i>
+                <i class="fa fa-address-card-o fa-3x"></i>
                 <h5><strong>Address</strong> section</h5>
               </a>
             </div>
