--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -79,20 +79,11 @@
 					</div>
 					
 					<h4>Accounts</h4>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
 						<div class="div-square">
-							<a class="btn disabled" href="">
+							<a href="{% url 'backend:staff_accounts_abuse' %}">
 								<i class="fa fa-user-plus fa-3x"></i>
-								<h5>Create Account</h5>
-							</a>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-						<div class="div-square">
-							<a class="btn disabled" href="" >
-	 							<i class="fa fa-unlock-alt fa-3x"></i>
-								<h5>Change Password </h5>
+								<h5>Abuse</h5>
 							</a>
 						</div>
 					</div>
