--- a/backend/templates/backend/staff_accounts_abuse.html
+++ b/backend/templates/backend/staff_accounts_abuse.html
@@ -2,9 +2,11 @@
 {% load staticfiles %}
 
 {% block content %}
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 <div class="alert alert-warning alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Announcement:</strong> In order to delete users, your user has to belong to the staff group, otherwise you will be redirected to the second-factor login.
+  <strong>Announcement:</strong> In order to ban users, your user has to belong to the staff group, otherwise you will be redirected to the second-factor login.
 </div>
 <table class="table">
         <thead>
@@ -15,7 +17,8 @@
                 <th>Last Name</th>
                 <th>Email</th>
                 <th>Staff?</th>
-                <th>Operation</th>
+                <th>Active?</th>
+                <th style="text-align: center">Operation</th>
             </tr>
         </thead>
         <tbody id="t-algs">
@@ -28,7 +31,8 @@
                 <td>{{ user.last_name }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.is_staff }}</td>
-                <td><a href="{% url 'backend:del_user' pk=user.pk %}"><span class="glyphicon glyphicon-trash"></span></a>
+                <td>{{ user.is_active }}</td>
+                <td style="text-align: center"><a alt="Ban" href="{% url 'backend:staff_ban_user' pk=user.pk %}"><span style="color: red" class="fa fa-ban fa-lg"></span></a>&nbsp;&nbsp;<a href="{% url 'backend:staff_unban_user' pk=user.pk %}"><span style="color: green" class="fa fa-check fa-lg"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
