--- a/backend/templates/backend/operations.html
+++ b/backend/templates/backend/operations.html
@@ -10,6 +10,29 @@
 				<!-- center left-->
 				<h3>Operations</h3>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
+					<h4>Accomodations management</h4>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="div-square">
+							<a href="{% url 'backend:house_create' %}">
+								<i class="fa fa-plane fa-3x"></i>
+								<h5><strong>Create</strong> new apartment</h5>
+							</a>
+						</div>
+					</div>
+
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="div-square">
+							<a href="{% url 'backend:backend_ops_apartments' %}">
+								<i class="fa fa-plane fa-3x"></i>
+								<h5><strong>Manage</strong> apartments</h5>
+							</a>
+						</div>
+					</div>
+
+					<div>
+						<p> &nbsp; </p>
+					</div>
+
 					<h4>Content</h4>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 						<div class="div-square">
