--- a/backend/templates/backend/staff_delete_users.html
+++ b/backend/templates/backend/staff_delete_users.html
@@ -28,7 +28,7 @@
                 <td>{{ user.last_name }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.is_staff }}</td>
-                <td><a href="{% url 'backend:del_user' pk=user.pk %}"><span class="glyphicon glyphicon-trash"></span></a>
+                <td><a href="{% url 'backend:del_user' pk=user.pk %}"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
             {% endfor %}
         </tbody>
