--- a/backend/templates/registration/login.html
+++ b/backend/templates/registration/login.html
@@ -1,50 +1,40 @@
 {% extends 'frontend/index.html' %}
 {% load staticfiles %}
-
 {% block content %}
 
-<!-- <div class="alert alert-warning alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Announcement:</strong> Login temporarily disabled due maintenance.
-</div> -->
+<link href="{% static '../static/css/login_style.css' %}" rel="stylesheet">
 
-{% if form.errors %}
-<p style="color:red;">Your username and password didn't match. Please try again.</p>
-{% endif %}
+<div class="form">
+  <ul class="tab-group">
+    <li class="tab"><a href="{% url 'backend:signup' %}">Sign Up</a></li>
+    <li class="tab activate"><a href="{% url 'frontend:login' %}" style="background-color: #cbb25c;">Log In</a></li>
+  </ul>
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
-<div id="loginbox" style="margin-top:50px" class="login-box">
+  <div id="login">
+    <form method="post">
+      {% csrf_token %}
+      <h1>Welcome Back!</h1>
 
-<form id="loginform" method="post" action="{% url 'frontend:login' %}" class="form-horizontal" role="form">
-{% csrf_token %}
-<div>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</div>
-<div>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</div>
-
-<div style="margin-top:10px" class="form-group">
-
-      <div class="col-sm-12 controls">
-        <input type="submit" value="login" id="btn-login" class="btn btn-success"/>
-        <input type="hidden" name="next" value="{{ next }}" />
-        <a disabled id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
+        <div class="field-wrap">
+        <label>
+          {{ form.username.label_tag }}<span class="req">*</span>
+        </label>
+        {{ form.username }}
       </div>
-    </div>
 
-</form>
+      <div class="field-wrap">
+        <label>
+          {{ form.password.label_tag }}<span class="req">*</span>
+        </label>
+        {{ form.password }}
+      </div>
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a disabled href="{% url 'frontend:password_reset' %}">Lost password?</a></p>
+      <p class="forgot"><a href="#">Forgot Password?</a></p>
+
+      <button class="button button-block"/>Log In</button>
+    </form>
+
+  </div>
+</div>
 
 {% endblock %}
